# C-instrumentator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-unix.yml  push.yml
include/bounded-loop-unroller/: bounded-loop-unroller.h  frontend_action.h  frontend_consumer.h  frontend_visitor.h
include/frontend-action/: frontend_action.h  frontend_consumer.h  frontend_visitor.h
include/goal-injector/: frontend_action.h  frontend_consumer.h  frontend_visitor.h  goal-injector.h
scripts/cmake/: Config.cmake  ExternalDependencies.cmake  FindLLVM.cmake
src/: CMakeLists.txt  foo.cpp  main.cpp
src/bounded-loop-unroller/: .clang-format  CMakeLists.txt  frontend_action.cpp  frontend_consumer.cpp  frontend_visitor.cpp  main.cpp
src/frontend-action/: frontend_action.cpp  frontend_consumer.cpp  frontend_visitor.cpp
src/goal-injector/: CMakeLists.txt  frontend_action.cpp  frontend_consumer.cpp  frontend_visitor.cpp  main.cpp
unit/: CMakeLists.txt  bounded-loop-unroller.test.cpp  goal-injector.test.cpp
